--- a/3hrs js project attempt-2/style.css
+++ b/3hrs js project attempt-2/style.css
@@ -20,7 +20,7 @@ body {
 By setting align-items: center;, you're aligning the flex items vertically along the cross-axis, meaning they will be centered vertically within the flex container. */
 
   padding: 20px;
-  background-color: #df0909;
+  background-color: #ff0404;
   color: #fff;
   position: sticky;
   top: 0px;
@@ -49,7 +49,7 @@ By setting align-items: center;, you're aligning the flex items vertically along
 }
 
 .navbar-nav li a:hover {
-  color: #ffd700;
+  color: #ffd903;
 }
 
 /* Another Website Styles */
@@ -61,18 +61,13 @@ By setting align-items: center;, you're aligning the flex items vertically along
 
 /* General Styles */
 
-h1 {
-  color: #333;
-}
 
 ul {
   list-style-type: none;
   padding: 0;
 }
 
-li {
-  margin-bottom: 3px;
-}
+
 
 /* Password Reminder Styles */
 #password-reminder {
@@ -129,22 +124,23 @@ li {
 #photo-preview {
   width: 150px;
   height: 180px;
-  border: 1px solid #ccc;
-  border-radius: 40px;
+  border: 2px solid #10fd08;
+  border-radius: 20px;
   background-size: cover;
   margin-bottom: 10px; /* Add margin bottom to create space between image and file input */
+    box-shadow: 0 4px 8px rgba(5, 235, 36, 0.5);
+     /* The 0 specifies that there is no horizontal offset for the shadow.
+The 4px specifies the vertical offset for the shadow.
+The 8px specifies the blur radius of the shadow. */
+   
 }
 
 #photo-input {
   margin-top: 0px;
-  margin-left: 140px; /* choose the input box for image where to be placed */
+  margin-left: 140px; 
 }
 
-#photo-preview img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 
 /* Search Input Styles */
 #search {
@@ -160,7 +156,7 @@ li {
 }
 #passwordcount {
   position: absolute;
-  top: 320px;
+  top: 310px;
   left: 40px;
 }
 
@@ -171,13 +167,15 @@ form {
 }
 
 input[type="text"],
-input[type="email"] {
+ input[type="email"]{
   padding: 8px;
   margin-bottom: 10px;
   width: 200px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(13, 230, 5, 0.5);
 }
+
 
 button {
   padding: 8px 16px;
@@ -220,11 +218,9 @@ button:hover {
   background-color: #2f4dd3;
 }
 
-div li {
-  margin: 0;
-}
+
 div img {
-  height: 200px; /* Set your desired height */
+  height: 200px; /*  height=200px */
   width: auto; /* Adjust width automatically to maintain aspect ratio */
 }
 
@@ -237,15 +233,16 @@ div img {
 /* Gallery Styles */
 .gallery-list {
   display: flex;
+  
+  /* In CSS, the justify-content property is used in flexbox layouts to define how the space within a flex container is distributed along the main axis. The space-between value of the justify-content property specifically aligns the flex items such that there is equal space between them, while the first and last items are flush with the start and end edges of the container, respectively. */
   justify-content: space-between;
   list-style-type: none;
+  /* For <ul> (unordered lists), the list-style-type default value is disc, which renders a filled circle as the bullet point for each list item.
+For <ol> (ordered lists), the list-style-type default value is decimal, which renders decimal numbers (1, 2, 3, ...) as the numbering style for each list item */
   padding: 0;
 }
 
-.gallery-item {
-  width: calc(33.33% - 20px);
-  margin-bottom: 20px;
-}
+
 
 .membership-details {
   text-align: center;
@@ -254,25 +251,32 @@ div img {
 .membership-title {
   margin-top: 3px;
 }
-
-.membership-title:hover,
-.membership-description:hover {
-  color: #ffd700;
-}
-
 .membership-description {
   margin-left: 20px;
   margin-top: 3px;
 }
+.membership-title:hover,
+.membership-description:hover {
+  color: #ffd700;
+   cursor: pointer;
+}
+
+
 
 .gallery-item {
   width: calc(33.33% - 20px);
+  /* 33.33% specifies that each .gallery-item element should take up 33.33% of the width of its containing element. This means that if there are three .gallery-item elements side by side within their container, they would each occupy one-third of the container's width.
+- 20px subtracts 20px from the calculated width. This indicates that each .gallery-item should have a margin of 20px on both the left and right sides. This is done to create space between the .gallery-item elements. */
   margin-bottom: 20px;
   text-align: center;
+  
 }
 
 .item-banner {
   margin: 0 auto;
+
+  /* margin-top and margin-bottom are set to 0, meaning no vertical margin.
+margin-left and margin-right are set to auto, indicating that the browser should automatically calculate and distribute the available horizontal space evenly on the left and right sides of the element. */
 }
 
 /* Apply the blink animation to the section title */
@@ -294,8 +298,12 @@ div img {
 }
 
 .img-cover {
-  transition: transform 0.5s ease;
-  border-radius: 30px;
+   /* any changes to the transform property of an element will be animated smoothly over a duration of 0.4 seconds, with an easing effect that starts slow, accelerates, and then slows down again. */
+  transition: transform 0.4s ease;
+  border-radius: 20px;
+  border: 2px solid #05f887;
+ box-shadow: 0 4px 8px rgba(8, 252, 69, 0.5);
+  cursor: pointer;
 }
 
 .img-cover:hover {
@@ -303,6 +311,7 @@ div img {
 }
 
 /* Footer Styles */
+/* 2 div element bottom and top  arrange in a column*/
 .footer {
   display: flex;
   flex-direction: column;
@@ -310,35 +319,53 @@ div img {
 .footer-link:hover {
   text-decoration: underline;
   color: #ffd700;
+   cursor: pointer;
 }
 
+/* 3 ul element and 1 div  arrange in a row*/
 .footer-top {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.footer-brand,
-.footer-list,
-.footer-list:last-child {
+
+.footer-list {
   flex: 1;
   margin-right: 60px;
   margin-left: 60px;
-}
+/* each of the four children elements with the class .footer-list will expand to fill all available space along the main axis (usually horizontally) of the parent container. They will share the available space equally, and any remaining space after accounting for their margins will be distributed among them according to the flex: 1; rule. The margin-right: 60px; and margin-left: 60px; */
 
+/* the total distance between them will be 60px (margin-right of the first element) + 60px (margin-left of the second element) = 120px. This creates a total spacing of 120px between the two elements. */
+
+}
+/* footer bottom  copyright */
 .footer-bottom {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
 }
 
+/* footer bottom list  */
 .footer-bottom-list {
   margin-top: 10px;
 }
 
+
+/* <li> element will be displayed vertically, creating a column of links within the <ul> element. This is the default behavior of list items in HTML, and it helps in organizing and structuring content within a list format */
+
+
+
+
+
 .footer-bottom-list li {
   display: inline;
-  margin: 20 10px;
+  margin: 20px 10px;
+/* margin: 3px 4px;
+In this case:
+
+The top and bottom margins would be 3px.
+The left and right margins would be 4px. */
+
+
+
+  /* top-right-bottom-left */
 }
